--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VUE_APP_PRODUCTION_URL=https://mywebsite.com
-VUE_APP_TITLE=John Matrix
-VUE_APP_DESCRIPTION=John's portfolio website. Former Delta Force operative and lumberjack hobbyist
-VUE_APP_OGDESCRIPTION=Former Delta Force operative and lumberjack hobbyist
+VUE_APP_TITLE=Taha Fersi
+VUE_APP_DESCRIPTION=Taha's portfolio website. Gameplay developer and software engineer
+VUE_APP_OGDESCRIPTION=Gameplay developer and software engineer
